Corrections to release notes
Signed-off-by: Mark S. Lewis <mark_lewis@uk.ibm.com>

--- a/release_notes/v1.5.5.md
+++ b/release_notes/v1.5.5.md
@@ -1,12 +1,9 @@
-v1.5.4 Release Notes - July 8, 2022
+v1.5.5 Release Notes - July 8, 2022
 ===================================
 
-v1.5.4 is a maintenance release, providing updates for the following issues in the Fabric CA: 
+v1.5.5 is a maintenance release, providing updates for the following issues in the Fabric CA:
 
-- Closes [Issue #305](https://github.com/hyperledger/fabric-ca/issues/305) : Issue with re-enrolling certificates 
-
-- Closes [Issue #309](https://github.com/hyperledger/fabric-ca/issues/309) : Interoperability tests are failing with latest CA updates
-
+- Closes [Issue #305](https://github.com/hyperledger/fabric-ca/issues/305) : Issue with re-enrolling certificates
 
 Dependencies
 ------------
@@ -18,10 +15,7 @@ Fabric CA v1.5.5 has been tested with the following dependencies:
 Changes, Known Issues, and Workarounds
 --------------------------------------
 
-This maintenance release addresses a regression in the Node and Java client SDKs, reverting the updates committed in [PR #304](https://github.com/hyperledger/fabric-ca/pull/304):
-
-- **Re-Opens** [Issue #303](https://github.com/hyperledger/fabric-ca/issues/303) : Idemix MSP Folder Structure incompatible with what Fabric expects
-
+None.
 
 Known Vulnerabilities
 ---------------------
