Build multi-arch docker images with buildx
Signed-off-by: Josh Kneubuhl <jkneubuh@us.ibm.com>

--- a/release_notes/v1.5.6-beta.md
+++ b/release_notes/v1.5.6-beta.md
@@ -1,16 +1,17 @@
 v1.5.6 Release Notes - July 8, 2022
 ===================================
 
-v1.5.6 is a maintenance release, providing updates for the following issues in the Fabric CA:
+v1.5.6-beta is a beta release, providing updates for the following issues in the Fabric CA:
 
 - Builds native arm64 CA binaries for linux and darwin
+- Builds multi-platform CA docker images for arm64 and amd64 with `buildx`
 
 Dependencies
 ------------
 
 Fabric CA v1.5.6 has been tested with the following dependencies:
 - Go 1.18.8
-- Alpine 3.16 (for Docker images)
+- Alpine 3.17 (for Docker images)
 
 Changes, Known Issues, and Workarounds
 --------------------------------------
