Publish release artifacts to conventional installation paths
Signed-off-by: Josh Kneubuhl <jkneubuh@us.ibm.com>

--- a/release_notes/v1.5.6-beta.md
+++ b/release_notes/v1.5.6-beta.md
@@ -1,4 +1,4 @@
-v1.5.6 Release Notes - July 8, 2022
+v1.5.6-beta Release Notes - Dec 9, 2022
 ===================================
 
 v1.5.6-beta is a beta release, providing updates for the following issues in the Fabric CA:
