--- a/release_notes/v1.5.8.md
+++ b/release_notes/v1.5.8.md
@@ -1,21 +1,34 @@
-v1.5.7 Release Notes - August 29, 2023
-======================================
+v1.5.8 Release Notes - December 20, 2023
+========================================
+
+Fixes
+-----
+
+**Fix s390x build**
+
+Update github.com/IBM/mathlib to fix compilation issue on s390x.
+[#387](https://github.com/hyperledger/fabric-ca/pull/387)
+
 
 Improvements
 ------------
 
-**SignerConfig struct now exports the RevocationHandle**
+**Log expiry overrides**
 
-SignerConfig struct now exports the RevocationHandle.
-The way the revocation handle is encoded has changed to align to what the Idemix library expects.
-[#363](https://github.com/hyperledger/fabric-ca/pull/363)
+If certificate expiry during enrollment gets overridden due to the CA's own expiry,
+log a warning message about the override.
+[#384](https://github.com/hyperledger/fabric-ca/pull/384)
+
 
 Dependencies
 ------------
 
-Fabric CA v1.5.7 has been tested with the following dependencies:
-- Go 1.20.5
+Fabric CA v1.5.8 has been tested with the following dependencies:
+- Go 1.21.5
 - Ubuntu 20.04 (for Docker images)
+- Databases
+    - PostgreSQL 13
+    - MySQL 8.0
 
 
 Changes, Known Issues, and Workarounds
